// Copyright 2021-2022 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package spec;

import "google/protobuf/any.proto";

message MessageFieldMessage {

    TestMessage message_field = 1;

    repeated TestMessage repeated_message_field = 2;


    message TestMessage {
        string name = 1;
    }

}

// Message used for testing JSON.stringify and JSON.parse functionality
message MessageStringifyMessage {
    string string_field = 1;
    int32 int32_field = 2;
    bool bool_field = 4;
    map<string, string> map_field = 5;

    InnerMessage message_field = 6;

    repeated InnerMessage repeated_message_field = 7;

    message InnerMessage {
        string name = 1;
    }
}

// Message used for testing JSON.stringify and JSON.parse functionality with an
// Any field
message MessageStringifyAnyMessage {
    string string_field = 1;

    google.protobuf.Any any_field = 2;
}


