// Copyright 2021-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package spec;

message OneofMessage {
    oneof scalar {
        int32 value = 1;
        string error = 2;
        bytes bytes = 3;
    }
    oneof message {
        OneofMessageFoo foo = 11;
        OneofMessageBar bar = 12;
        OneofMessageBar baz = 13;
    }
    oneof enum {
        OneofEnum e = 21;
    }
}

message OneofMessageFoo {
    string name = 1;
    bool toggle = 2;
}

message OneofMessageBar {
    int32 a = 1;
    int32 b = 2;
}

enum OneofEnum {
    ONEOF_ENUM_UNSPECIFIED = 0;
    ONEOF_ENUM_A = 1;
    ONEOF_ENUM_B = 2;
}
